--- a/src/Validation.ipynb
+++ b/src/Validation.ipynb
@@ -259,7 +259,20 @@
     "Y=ipl_auction_encoded_df['SOLD PRICE']\n",
     "train_x ,test_x,train_y,test_y=train_test_split(X,Y,train_size=0.8,random_state=42)\n",
     "\n",
-    "print(train_x ,test_x,train_y,test_y)\n",
+    "print(train_x ,test_x,train_y,test_y)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "\n"
    ],
    "metadata": {
