--- a/src/Model on Train Dataset.ipynb
+++ b/src/Model on Train Dataset.ipynb
@@ -318,6 +318,20 @@
     "train_x ,test_x,train_y,test_y=train_test_split(X,Y,train_size=0.8,random_state=42)\n",
     "\n",
     "print(train_x,test_x,train_y,test_y)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "\n",
     "\n"
    ],
