--- a/src/Data_Analysis.ipynb
+++ b/src/Data_Analysis.ipynb
@@ -88,6 +88,45 @@
     "\n",
     "X_features"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import sklearn\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import statsmodels.api as sm\n",
+    "###############################\n",
+    "\"\"\"Splitting the dataset into train and Validation \"\"\"\n",
+    "##spliting data into 80%:20%\n",
+    "X=sm.add_constant(ipl_auction_encoded_df)\n",
+    "Y=ipl_auction_df['SOLD PRICE']\n",
+    "train_X ,test_X,train_y,test_y=train_test_split(X,Y,train_size=0.8,random_state=42)\n",
+    "\n",
+    "print(train_X,test_X,train_y,test_y)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
